plugins {
    id 'groovy'
    id 'codenarc'
    id 'com.gradle.plugin-publish' version '0.9.4'
    id 'java-gradle-plugin'
}

task wrapper(type: Wrapper) {
    gradleVersion = '2.14-rc-1'
}

sourceCompatibility = '1.6'

dependencies {
    compile gradleApi()
    compile 'org.jvnet.localizer:maven-localizer-plugin:1.13'
    compile 'org.jenkins-ci:version-number:1.0'
    compile 'net.java.sezpoz:sezpoz:1.9'
    compile localGroovy()
    testCompile('org.spockframework:spock-core:1.0-groovy-2.4') {
        exclude module: 'groovy-all' // use the version that is distributed with Gradle
    }
    testCompile 'xmlunit:xmlunit:1.6'
}

codenarc {
    toolVersion = '0.24'
    configFile = file('config/codenarc/rules.groovy')
}

codenarcTest {
    configFile = file('config/codenarc/rules-test.groovy')
}

test {
    jvmArgs += ['-XX:MaxPermSize=256m']
}


pluginBundle {
    website = 'https://wiki.jenkins-ci.org/display/JENKINS/Gradle+JPI+Plugin'
    vcsUrl = 'https://github.com/jenkinsci/gradle-jpi-plugin'
    description = 'The Gradle JPI plugin is a Gradle plugin for building Jenkins plugins'
    tags = ['jenkins']

    plugins {
        jpiPlugin {
            id = 'org.jenkins-ci.jpi'
            displayName = 'JPI plugin'
        }
    }

    mavenCoordinates {
        groupId = 'org.jenkins-ci.tools'
        artifactId = 'gradle-jpi-plugin'
    }
}

gradlePlugin {
    plugins {
        jpiPlugin {
            id = 'org.jenkins-ci.jpi'
            implementationClass = 'org.jenkinsci.gradle.plugins.jpi.JpiPlugin'
        }
    }
}